src/test/ui/const-generics/const-argument-cross-crate-mismatch.min.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/const-argument-cross-crate-mismatch.rs:7:41
   |
LL |     let _ = const_generic_lib::function(const_generic_lib::Struct([0u8, 1u8]));
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^----------^
   |                                                                   |
   |                                                                   expected `[u8; 3]`, found `[u8; 2]`
   |
help: provide an argument of the correct type
   |
LL |     let _ = const_generic_lib::function(({[u8; 3]}));
   |                                         ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/const-argument-cross-crate-mismatch.rs:9:39
   |
LL |     let _: const_generic_lib::Alias = const_generic_lib::Struct([0u8, 1u8, 2u8]);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^---------------^
   |                                                                 |
   |                                                                 expected `[u8; 2]`, found `[u8; 3]`
   |
help: provide an argument of the correct type
   |
LL |     let _: const_generic_lib::Alias = ({[u8; 2]});
   |                                       ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
